# ha-franklin

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: awesomebot.yml  build-publish.yml  mega-linter.yml
.hook-scripts/: run-python-tests
config/: config-example.yaml
ha_franklin/: __init__.py  cli.py  monitor.py  utils.py
tests/: __init__.py  test_package.py
